--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "php": "^7.3 || ^7.4 || ^8.0",
         "ext-json": "*",
         "symfony/options-resolver": ">=4.4,<6",
-        "psr/cache": "^1.0",
+        "psr/cache": "^1.0 || ^2.0",
         "psr/simple-cache": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "psr/event-dispatcher-implementation": "^1.0",
